--- a/src/main/resources/assets/roboguy99/lang/en_US.lang
+++ b/src/main/resources/assets/roboguy99/lang/en_US.lang
@@ -3,3 +3,4 @@ item.element.hydrogen.name=Hydrogen
 item.element.helium.name=Helium
 item.element.carbon.name=Carbon
 item.element.oxygen.name=Oxygen
+item.element.uranium.name=Uranium
