Added new elements

--- a/src/main/resources/assets/roboguy99/lang/en_US.lang
+++ b/src/main/resources/assets/roboguy99/lang/en_US.lang
@@ -1,6 +1,10 @@
 itemGroup.tabElements=Elements
 item.element.hydrogen.name=Hydrogen
 item.element.helium.name=Helium
+item.element.lithium.name=Lithium
+item.element.berylium.name=Berylium
+item.element.boron.name=Boron
 item.element.carbon.name=Carbon
+item.element.nitrogen.name=Nitrogen
 item.element.oxygen.name=Oxygen
 item.element.uranium.name=Uranium
