Added NBT-lacking compound for niceness

--- a/src/main/resources/assets/roboguy99/lang/en_US.lang
+++ b/src/main/resources/assets/roboguy99/lang/en_US.lang
@@ -8,3 +8,4 @@ item.element.carbon.name=Carbon
 item.element.nitrogen.name=Nitrogen
 item.element.oxygen.name=Oxygen
 item.element.uranium.name=Uranium
+item.compound.name=Compound
