Dramatically changed naming system to use language files or formula

--- a/src/main/resources/assets/roboguy99/lang/en_US.lang
+++ b/src/main/resources/assets/roboguy99/lang/en_US.lang
@@ -9,3 +9,5 @@ item.element.nitrogen.name=Nitrogen
 item.element.oxygen.name=Oxygen
 item.element.uranium.name=Uranium
 item.compound.name=Compound
+compound.water=Water
+compound.tnt=TNT
