Changed TNT name to full version

--- a/src/main/resources/assets/roboguy99/lang/en_US.lang
+++ b/src/main/resources/assets/roboguy99/lang/en_US.lang
@@ -10,4 +10,4 @@ item.element.oxygen.name=Oxygen
 item.element.uranium.name=Uranium
 item.compound.name=Compound
 compound.water=Water
-compound.tnt=TNT
+compound.tnt=Trinitrotoluene (TNT)
