--- a/src/main/resources/assets/roboguy99/lang/en_UK.lang
+++ b/src/main/resources/assets/roboguy99/lang/en_UK.lang
@@ -1,3 +1,3 @@
-element.aluminium.name=Aluminium
-element.sulphur.name=Sulphur
+item.element.aluminium.name=Aluminium
+item.element.sulphur.name=Sulphur
 item.element.caesium.name=Caesium
