Fixed missing .name on antimony

--- a/src/main/resources/assets/chemistry/lang/en_US.lang
+++ b/src/main/resources/assets/chemistry/lang/en_US.lang
@@ -59,7 +59,7 @@ item.silver.name=Silver
 item.cadmium.name=Cadmium
 item.indium.name=Indium
 item.tin.name=Tin
-item.antimony=Antimony
+item.antimony.name=Antimony
 item.tellurium.name=Tellurium
 item.iodine.name=Iodine
 item.xenon.name=Xenon
