Updated language files

--- a/src/main/resources/assets/chemistry/lang/en_US.lang
+++ b/src/main/resources/assets/chemistry/lang/en_US.lang
@@ -9,126 +9,126 @@ group.nonMetals=Non Metals
 group.nobleGases=Noble Gases
 group.special=Internal Workings
 
-item.hydrogen.name=Hydrogen
-item.helium.name=Helium
-item.lithium.name=Lithium
-item.berylium.name=Berylium
-item.boron.name=Boron
-item.carbon.name=Carbon
-item.nitrogen.name=Nitrogen
-item.oxygen.name=Oxygen
-item.flourine.name=Flourine
-item.neon.name=Neon
-item.sodium.name=Sodium
-item.magnesium.name=Magnesium
-item.aluminium.name=Aluminum
-item.aluminium.name=Aluminium
-item.silicon.name=Silicon
-item.phosphorus.name=Phosphorus
-item.sulphur.name=Sulfur
-item.chlorine.name=Chlorine
-item.argon.name=Argon
-item.potassium.name=Potassium
-item.calcium.name=Calcium
-item.scandium.name=Scandium
-item.titanium.name=Titanium
-item.vanadium.name=Vanadium
-item.chromium.name=Chromium
-item.manganese.name=Manganese
-item.iron.name=Iron
-item.cobalt.name=Cobalt
-item.nickel.name=Nickel
-item.copper.name=Copper
-item.zinc.name=Zinc
-item.gallium.name=Gallium
-item.germanium.name=Germanium
-item.arsenic.name=Arsenic
-item.selenium.name=Selenium
-item.bromine.name=Bromine
-item.krypton.name=Krypton
-item.rubidium.name=Rubidium
-item.strontium.name=Strontium
-item.yttrium.name=Yttrium
-item.zirconium.name=Zirconium
-item.niobium.name=Niobium
-item.molybdenum.name=Molybdenum
-item.technetium.name=Technetium
-item.ruthenium.name=Ruthenium
-item.rhodium.name=Rhodium
-item.palladium.name=Palladium
-item.silver.name=Silver
-item.cadmium.name=Cadmium
-item.indium.name=Indium
-item.tin.name=Tin
-item.antimony.name=Antimony
-item.tellurium.name=Tellurium
-item.iodine.name=Iodine
-item.xenon.name=Xenon
-item.thallium.name=Thallium
-item.caesium.name=Cesium
-item.barium.name=Barium
-item.lanthanum.name=Lanthanum
-item.cerium.name=Cerium
-item.praseodymium.name=Praseodymium
-item.neodymium.name=Neoymium
-item.promethium.name=Promethium
-item.samarium.name=Samarium
-item.europium.name=Europium
-item.gadolinium.name=Gadolinium
-item.terbium.name=Terbium
-item.dysprosium.name=Dystrosium
-item.holmium.name=Holmium
-item.erbium.name=Erbium
-item.thulium.name=Thulium
-item.ytterbium.name=Ytterbium
-item.lutetium.name=Lutetium
-item.hafnium.name=Hafnium
-item.tantalum.name=Tantalum
-item.tungsten.name=Tungsten
-item.rhenium.name=Rhenium
-item.osmium.name=Osmium
-item.iridium.name=Iridium
-item.platinum.name=Platinum
-item.gold.name=Gold
-item.mercury.name=Mercury
-item.thalium.name=Thalium
-item.lead.name=Lead
-item.bismuth.name=Bismuth
-item.polonium.name=Polonium
-item.astatine.name=Astatine
-item.radon.name=Radon
-item.francium.name=Francium
-item.radium.name=Radium
-item.actinium.name=Actinium
-item.thorium.name=Thorium
-item.protactinium.name=Protactinium
-item.uranium.name=Uranium
-item.neptunium.name=Neptunium
-item.plutonium.name=Plutonium
-item.americium.name=Americium
-item.curium.name=Curium
-item.berkelium.name=Berkelium
-item.californium.name=Californium
-item.einsteinium.name=Einsteinium
-item.fermium.name=Fermium
-item.mendelevium.name=Mendelevium
-item.nobelium.name=Nobelium
-item.lawrencium.name=Lawrencium
-item.rutherfordium.name=Rutherfordium
-item.dubnium.name=Dubnium
-item.seaborgium.name=Seaborgium
-item.bohrium.name=Bohrium
-item.hassium.name=Hassium
-item.meitnerium.name=Meitnerium
-item.darmstadtium.name=Darmstadtium
-item.roentgenium.name=Roentgenium
-item.copernicium.name=Copernicium
-item.ununtrium.name=Ununtrium
-item.flerovium.name=Flerovium
-item.ununpentium.name=Ununpentium
-item.livermorium.name=Livermorium
-item.ununseptium.name=Ununseptium
-item.ununoctium.name=Ununoctium
+item.element_hydrogen.name=Hydrogen
+item.element_helium.name=Helium
+item.element_lithium.name=Lithium
+item.element_berylium.name=Berylium
+item.element_boron.name=Boron
+item.element_carbon.name=Carbon
+item.element_nitrogen.name=Nitrogen
+item.element_oxygen.name=Oxygen
+item.element_flourine.name=Flourine
+item.element_neon.name=Neon
+item.element_sodium.name=Sodium
+item.element_magnesium.name=Magnesium
+item.element_aluminium.name=Aluminum
+item.element_aluminium.name=Aluminium
+item.element_silicon.name=Silicon
+item.element_phosphorus.name=Phosphorus
+item.element_sulphur.name=Sulfur
+item.element_chlorine.name=Chlorine
+item.element_argon.name=Argon
+item.element_potassium.name=Potassium
+item.element_calcium.name=Calcium
+item.element_scandium.name=Scandium
+item.element_titanium.name=Titanium
+item.element_vanadium.name=Vanadium
+item.element_chromium.name=Chromium
+item.element_manganese.name=Manganese
+item.element_iron.name=Iron
+item.element_cobalt.name=Cobalt
+item.element_nickel.name=Nickel
+item.element_copper.name=Copper
+item.element_zinc.name=Zinc
+item.element_gallium.name=Gallium
+item.element_germanium.name=Germanium
+item.element_arsenic.name=Arsenic
+item.element_selenium.name=Selenium
+item.element_bromine.name=Bromine
+item.element_krypton.name=Krypton
+item.element_rubidium.name=Rubidium
+item.element_strontium.name=Strontium
+item.element_yttrium.name=Yttrium
+item.element_zirconium.name=Zirconium
+item.element_niobium.name=Niobium
+item.element_molybdenum.name=Molybdenum
+item.element_technetium.name=Technetium
+item.element_ruthenium.name=Ruthenium
+item.element_rhodium.name=Rhodium
+item.element_palladium.name=Palladium
+item.element_silver.name=Silver
+item.element_cadmium.name=Cadmium
+item.element_indium.name=Indium
+item.element_tin.name=Tin
+item.element_antimony.name=Antimony
+item.element_tellurium.name=Tellurium
+item.element_iodine.name=Iodine
+item.element_xenon.name=Xenon
+item.element_thallium.name=Thallium
+item.element_caesium.name=Cesium
+item.element_barium.name=Barium
+item.element_lanthanum.name=Lanthanum
+item.element_cerium.name=Cerium
+item.element_praseodymium.name=Praseodymium
+item.element_neodymium.name=Neoymium
+item.element_promethium.name=Promethium
+item.element_samarium.name=Samarium
+item.element_europium.name=Europium
+item.element_gadolinium.name=Gadolinium
+item.element_terbium.name=Terbium
+item.element_dysprosium.name=Dystrosium
+item.element_holmium.name=Holmium
+item.element_erbium.name=Erbium
+item.element_thulium.name=Thulium
+item.element_ytterbium.name=Ytterbium
+item.element_lutetium.name=Lutetium
+item.element_hafnium.name=Hafnium
+item.element_tantalum.name=Tantalum
+item.element_tungsten.name=Tungsten
+item.element_rhenium.name=Rhenium
+item.element_osmium.name=Osmium
+item.element_iridium.name=Iridium
+item.element_platinum.name=Platinum
+item.element_gold.name=Gold
+item.element_mercury.name=Mercury
+item.element_thalium.name=Thalium
+item.element_lead.name=Lead
+item.element_bismuth.name=Bismuth
+item.element_polonium.name=Polonium
+item.element_astatine.name=Astatine
+item.element_radon.name=Radon
+item.element_francium.name=Francium
+item.element_radium.name=Radium
+item.element_actinium.name=Actinium
+item.element_thorium.name=Thorium
+item.element_protactinium.name=Protactinium
+item.element_uranium.name=Uranium
+item.element_neptunium.name=Neptunium
+item.element_plutonium.name=Plutonium
+item.element_americium.name=Americium
+item.element_curium.name=Curium
+item.element_berkelium.name=Berkelium
+item.element_californium.name=Californium
+item.element_einsteinium.name=Einsteinium
+item.element_fermium.name=Fermium
+item.element_mendelevium.name=Mendelevium
+item.element_nobelium.name=Nobelium
+item.element_lawrencium.name=Lawrencium
+item.element_rutherfordium.name=Rutherfordium
+item.element_dubnium.name=Dubnium
+item.element_seaborgium.name=Seaborgium
+item.element_bohrium.name=Bohrium
+item.element_hassium.name=Hassium
+item.element_meitnerium.name=Meitnerium
+item.element_darmstadtium.name=Darmstadtium
+item.element_roentgenium.name=Roentgenium
+item.element_copernicium.name=Copernicium
+item.element_ununtrium.name=Ununtrium
+item.element_flerovium.name=Flerovium
+item.element_ununpentium.name=Ununpentium
+item.element_livermorium.name=Livermorium
+item.element_ununseptium.name=Ununseptium
+item.element_ununoctium.name=Ununoctium
 
 item.compound.name=Compound
 compound.water=Water
