--- a/src/main/resources/assets/chemistry/lang/en_PT.lang
+++ b/src/main/resources/assets/chemistry/lang/en_PT.lang
@@ -1,3 +1,3 @@
-item.helium.name=Ye Floaty Gas
+item.element_helium.name=Ye Floaty Gas
 compound.water=Wet Stuff
 compound.tnt=A Ship Sinkin' Device
