--- a/src/main/resources/assets/chemistry/lang/en_UK.lang
+++ b/src/main/resources/assets/chemistry/lang/en_UK.lang
@@ -1,3 +1,3 @@
-item.aluminium.name=Aluminium
-item.sulphur.name=Sulphur
-item.caesium.name=Caesium
+item.element_aluminium.name=Aluminium
+item.element_sulphur.name=Sulphur
+item.element_caesium.name=Caesium
