Fixed missing content for molecule marker

--- a/src/main/resources/assets/chemistry/lang/en_US.lang
+++ b/src/main/resources/assets/chemistry/lang/en_US.lang
@@ -130,6 +130,8 @@ item.element_livermorium.name=Livermorium
 item.element_ununseptium.name=Ununseptium
 item.element_ununoctium.name=Ununoctium
 
+item.element_marker.molecule.name=Molecule Marker
+
 item.compound.name=Compound
 compound.water=Water
 compound.tnt=Trinitrotoluene (TNT)
