--- a/src/main/resources/assets/chemistry/lang/en_US.lang
+++ b/src/main/resources/assets/chemistry/lang/en_US.lang
@@ -135,3 +135,5 @@ item.element_marker.molecule.name=Molecule Marker
 item.compound.name=Compound
 compound.water=Water
 compound.tnt=Trinitrotoluene (TNT)
+compound.limestone=Limestone
+compound.ethanol=Ethanol
