Added name to tile

--- a/src/main/resources/assets/chemistry/lang/en_US.lang
+++ b/src/main/resources/assets/chemistry/lang/en_US.lang
@@ -137,3 +137,5 @@ compound.water=Water
 compound.tnt=Trinitrotoluene (TNT)
 compound.limestone=Limestone
 compound.ethanol=Ethanol
+
+tile.blockCompoundCreator.name=Compound Creator
