Updated language file. More to come.

--- a/src/main/resources/assets/chemistry_worldgen/lang/en_US.lang
+++ b/src/main/resources/assets/chemistry_worldgen/lang/en_US.lang
@@ -26,7 +26,7 @@ tile.ore_titanium.name=Titanium
 tile.ore_vanadium.name=Vanadium
 tile.ore_chromium.name=Chromium
 tile.ore_manganese.name=Manganese
-tile.ore_iron.name=Iron
+tile.ore_iron.name=Iron Ore
 tile.ore_cobalt.name=Cobalt
 tile.ore_nickel.name=Nickel
 tile.ore_copper.name=Copper
